# swagger/swagger.yaml
@@ -193,7 +193,7 @@ definitions:
         - ops
         - dev
         items:
-          example: Voluptatem blanditiis reiciendis aut facilis nulla.
+          example: Eaque fugit officia quo ipsam excepturi dignissimos.
           type: string
         type: array
       username:
@@ -1264,7 +1264,7 @@ definitions:
         - ops
         - dev
         items:
-          example: Eaque fugit officia quo ipsam excepturi dignissimos.
+          example: Hic aspernatur.
           type: string
         type: array
       username:
@@ -1399,6 +1399,63 @@ definitions:
     - SSHUser
     - SSHPassword
     title: CreateBackupPayload
+    type: object
+  CreateDbRolePayload:
+    example:
+      name: report
+      privileges:
+      - namespace: test
+        privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+        set: test
+    properties:
+      name:
+        description: Role name
+        example: report
+        type: string
+      privileges:
+        description: Valid database privileges
+        example:
+        - namespace: test
+          privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+          set: test
+        items:
+          $ref: '#/definitions/Privilege'
+        type: array
+    required:
+    - name
+    - privileges
+    title: CreateDbRolePayload
+    type: object
+  CreateDbUserPayload:
+    example:
+      password: password
+      roles:
+      - Aut temporibus.
+      - Aut temporibus.
+      username: ada
+    properties:
+      password:
+        description: Password. If Password is not provided, the user will be updated.
+        example: password
+        type: string
+      roles:
+        description: Database User Roles to be granted to the User
+        example:
+        - Aut temporibus.
+        - Aut temporibus.
+        items:
+          example: Aut temporibus.
+          type: string
+        type: array
+      username:
+        description: Database User Id
+        example: ada
+        type: string
+    required:
+    - username
+    - password
+    - roles
+    title: CreateDbUserPayload
     type: object
   CreateRestorePayload:
     example:
@@ -1571,82 +1628,17 @@ definitions:
     - seeds
     title: SaveConnectionPayload
     type: object
-  SaveDbRolePayload:
-    example:
-      name: report
-      privileges:
-      - namespace: test
-        privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
-        set: test
-    properties:
-      name:
-        description: Role name
-        example: report
-        type: string
-      privileges:
-        description: Valid database privilege
-        example:
-        - namespace: test
-          privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
-          set: test
-        items:
-          $ref: '#/definitions/Privilege'
-        type: array
-    required:
-    - name
-    - privileges
-    title: SaveDbRolePayload
-    type: object
-  SaveDbUserPayload:
-    example:
-      grantRoles:
-      - Ut placeat aut temporibus.
-      - Ut placeat aut temporibus.
-      password: password
-      revokeRoles:
-      - Animi incidunt ut voluptatem.
-      username: ada
-    properties:
-      grantRoles:
-        description: Database User Roles to be granted to the User
-        example:
-        - Ut placeat aut temporibus.
-        - Ut placeat aut temporibus.
-        items:
-          example: Ut placeat aut temporibus.
-          type: string
-        type: array
-      password:
-        description: Password. If Password is not provided, the user will be updated.
-        example: password
-        type: string
-      revokeRoles:
-        description: Database User Roles to be revoked from the User
-        example:
-        - Animi incidunt ut voluptatem.
-        items:
-          example: Animi incidunt ut voluptatem.
-          type: string
-        type: array
-      username:
-        description: Database User Id
-        example: ada
-        type: string
-    required:
-    - username
-    title: SaveDbUserPayload
-    type: object
   SaveIndexPayload:
     example:
-      binName: Nulla explicabo dignissimos.
+      binName: Voluptates et veniam aut libero aut.
       indexName: idxAccounts
-      namespace: Voluptates et veniam aut libero aut.
-      setName: Quaerat qui vitae qui tenetur quis ea.
+      namespace: Quaerat qui vitae qui tenetur quis ea.
+      setName: Ab aliquid iure.
       type: NUMERIC
     properties:
       binName:
         description: Index's Bin name
-        example: Nulla explicabo dignissimos.
+        example: Voluptates et veniam aut libero aut.
         type: string
       indexName:
         description: Index's Name
@@ -1654,11 +1646,11 @@ definitions:
         type: string
       namespace:
         description: Index's Namespace
-        example: Voluptates et veniam aut libero aut.
+        example: Quaerat qui vitae qui tenetur quis ea.
         type: string
       setName:
         description: Index's Set name
-        example: Quaerat qui vitae qui tenetur quis ea.
+        example: Ab aliquid iure.
         type: string
       type:
         description: Index's type
@@ -1676,7 +1668,7 @@ definitions:
   SaveModulePayload:
     example:
       name: reports
-      source: Ab aliquid iure.
+      source: Voluptatem blanditiis reiciendis aut facilis nulla.
       type: LUA
     properties:
       name:
@@ -1685,7 +1677,7 @@ definitions:
         type: string
       source:
         description: Module's Source Code
-        example: Ab aliquid iure.
+        example: Voluptatem blanditiis reiciendis aut facilis nulla.
         type: string
       type:
         description: Module's type
@@ -1731,7 +1723,7 @@ definitions:
         - ops
         - dev
         items:
-          example: Hic aspernatur.
+          example: Sed possimus aut error voluptatibus aut et.
           type: string
         type: array
       username:
@@ -1787,6 +1779,93 @@ definitions:
     required:
     - newConfig
     title: SetConfigNodePayload
+    type: object
+  UpdateDbRolePayload:
+    example:
+      grantPrivileges:
+      - namespace: test
+        privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+        set: test
+      - namespace: test
+        privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+        set: test
+      name: report
+      revokePrivileges:
+      - namespace: test
+        privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+        set: test
+      - namespace: test
+        privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+        set: test
+    properties:
+      grantPrivileges:
+        description: DB Privileges to be granted
+        example:
+        - namespace: test
+          privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+          set: test
+        - namespace: test
+          privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+          set: test
+        items:
+          $ref: '#/definitions/Privilege'
+        type: array
+      name:
+        description: Role name
+        example: report
+        type: string
+      revokePrivileges:
+        description: DB Privileges to be revoked
+        example:
+        - namespace: test
+          privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+          set: test
+        - namespace: test
+          privilege: read|read-write|read-write-udf|sys-admin|user-admin|data-admin
+          set: test
+        items:
+          $ref: '#/definitions/Privilege'
+        type: array
+    required:
+    - name
+    title: UpdateDbRolePayload
+    type: object
+  UpdateDbUserPayload:
+    example:
+      grantRoles:
+      - Animi incidunt ut voluptatem.
+      password: password
+      revokeRoles:
+      - Explicabo dignissimos.
+      username: ada
+    properties:
+      grantRoles:
+        description: Database User Roles to be granted to the User
+        example:
+        - Animi incidunt ut voluptatem.
+        items:
+          example: Animi incidunt ut voluptatem.
+          type: string
+        type: array
+      password:
+        description: Password. If Password is not provided, the user will be updated.
+        example: password
+        type: string
+      revokeRoles:
+        description: Database User Roles to be revoked from the User
+        example:
+        - Explicabo dignissimos.
+        items:
+          example: Explicabo dignissimos.
+          type: string
+        type: array
+      username:
+        description: Database User Id
+        example: ada
+        type: string
+    required:
+    - username
+    title: UpdateDbUserPayload
     type: object
   error:
     description: Error response media type (default view)
@@ -3804,7 +3883,7 @@ paths:
 
         Required security scopes:
           * `api:enterprise`
-      operationId: db-role#save
+      operationId: db-role#update
       parameters:
       - description: Connection Id
         in: path
@@ -3816,7 +3895,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/SaveDbRolePayload'
+          $ref: '#/definitions/UpdateDbRolePayload'
       produces:
       - application/vnd.aerospike.amc.cluster.role.response+json
       responses:
@@ -3836,7 +3915,48 @@ paths:
       security:
       - jwt:
         - api:enterprise
-      summary: save db-role
+      summary: update db-role
+      tags:
+      - db-role
+    put:
+      description: |-
+        Register or Update a role
+
+        Required security scopes:
+          * `api:enterprise`
+      operationId: db-role#create
+      parameters:
+      - description: Connection Id
+        in: path
+        name: connId
+        pattern: '[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}'
+        required: true
+        type: string
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/CreateDbRolePayload'
+      produces:
+      - application/vnd.aerospike.amc.cluster.role.response+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AerospikeAmcClusterRoleResponse'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      schemes:
+      - http
+      - https
+      security:
+      - jwt:
+        - api:enterprise
+      summary: create db-role
       tags:
       - db-role
   /api/v1/connections/{connId}/roles/{role}:
@@ -3968,7 +4088,7 @@ paths:
 
         Required security scopes:
           * `api:enterprise`
-      operationId: db-user#save
+      operationId: db-user#update
       parameters:
       - description: Connection Id
         in: path
@@ -3980,7 +4100,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/SaveDbUserPayload'
+          $ref: '#/definitions/UpdateDbUserPayload'
       produces:
       - application/vnd.aerospike.amc.cluster.user.response+json
       responses:
@@ -4000,7 +4120,48 @@ paths:
       security:
       - jwt:
         - api:enterprise
-      summary: save db-user
+      summary: update db-user
+      tags:
+      - db-user
+    put:
+      description: |-
+        Register or Update a user
+
+        Required security scopes:
+          * `api:enterprise`
+      operationId: db-user#create
+      parameters:
+      - description: Connection Id
+        in: path
+        name: connId
+        pattern: '[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}'
+        required: true
+        type: string
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/CreateDbUserPayload'
+      produces:
+      - application/vnd.aerospike.amc.cluster.user.response+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AerospikeAmcClusterUserResponse'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      schemes:
+      - http
+      - https
+      security:
+      - jwt:
+        - api:enterprise
+      summary: create db-user
       tags:
       - db-user
   /api/v1/connections/{connId}/users/{username}:
